# napari-slic

./: .gitignore  README.md  annotator.py  batch_annotator.py  config.example.yaml  config.py  inspect_masks.py  precompute.py  precompute_all.py  pyproject.toml  tutorial_plan.md
test/.annotations/: apple-2_borders.npy  apple-2_segs_550.npy  apple_borders.npy  apple_segs_550.npy  apple_tissues.npy
